# MyTools

./: CMakeLists.txt  README.md
camadjust/: CMakeLists.txt  README.ru.md
camadjust/include/: CameraProcessor.h  PresetManager.h  V4L2Output.h
camadjust/src/: CameraProcessor.cpp  PresetManager.cpp  V4L2Output.cpp  main.cpp
pdf2md/: CMakeLists.txt  README.ru.md
pdf2md/src/: main.cpp
